interface Shape {
    String culoare = "nedefinit";

    double getPerimetru();
}