abstract class Shape2D {
    abstract double getArie();
}