abstract class Shape3D {
    abstract double getVolum();
}
